--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import './partials/_footer.scss';
 @import './partials/_header.scss';
+@import './partials/_index.scss';
 
 
 
@@ -10,3 +11,20 @@ ul {
         display: inline;
     }
 }
+
+.jumbo {
+   width: 100%;
+   height: 500px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.text-white {
+    color: white;
+    font-weight: bolder;
+    font-size: 25px;
+    padding-top: 30px;
+    padding-bottom: 10px;
+}
+
